# rbt-cicd

./: .gitignore  pyproject.toml
.github/workflows/: robotframework.yml
